--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 
-{% block title %}Вътрешна грешка в сървъра{% endblock %}
+{% block title %}Вътрешна грешка{% endblock %}
 
-{% block app_content %}
-<div class="container text-center mt-5">
-    <h1 class="display-1">500</h1>
-    <h2>Вътрешна грешка в сървъра</h2>
-    <p class="lead">
-        Съжаляваме, възникна неочаквана грешка. Нашият екип е уведомен.
-        Моля, опитайте отново по-късно.
+{% block content %}
+<div class="text-center py-5">
+    <h1 class="display-1 text-danger">500</h1>
+    <h2 class="mb-4">Вътрешна грешка в сървъра</h2>
+    <p class="lead text-muted mb-4">
+       Възникна неочаквана грешка. Вече работим по отстраняването й. Моля, опитайте отново по-късно.
     </p>
-    <a href="{{ url_for('main.index') }}" class="btn btn-primary mt-3">Към началната страница</a>
+    <a href="{{ url_for('main.index') }}" class="btn btn-primary">
+        <i class="bi bi-house-door-fill"></i> Върни се на началната страница
+    </a>
 </div>
 {% endblock %}
